<resources>
    <string name="app_name">Urban Roots</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="report_problem">Report an issue</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_in_text">Sign In</string>
    <string name="problem_title">Title</string>
    <string name="issue_description">Issue Description</string>
    <string name="pick_location">Pick Location</string>
    <string name="default_location_text">Toryglen</string>
    <string name="send_report">Send Report</string>
    <string name="signup_title">Title</string>
    <string name="signup_fname">First Name</string>
    <string name="signup_lname">Last Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_phone">Contact No</string>
    <string name="signup_location">Post Code</string>
    <string name="signup_password">Password</string>
    <string name="signup_skills">Skills/Interests (Optional)</string>
    <string name="signup_toptext">Enter details to register as a volunteer with Urbans Roots.  Your email and password will be used to login to the app.</string>
    <string name="card_accept_button">Accept</string>
    <string name="card_decline_button">Decline</string>

</resources>
