<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.org.urbanroots.activities.ReportIssueActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_title"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:hint="@string/problem_title"
        android:width="300dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/et_description"
        android:layout_below="@+id/et_title"
        android:layout_centerHorizontal="true"
        android:hint="@string/issue_description"/>

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/b_pick_location"
        android:layout_below="@id/et_description"
        android:layout_centerHorizontal="true"
        android:text="@string/pick_location"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_pick_location"
        android:layout_centerHorizontal="true"
        android:text="@string/default_location_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_report"
        android:id="@+id/b_send_report"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="sendReport"/>


</RelativeLayout>
