<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.org.urbanroots.activities.SignUpActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_password_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="Repeat Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_fname" />

            <EditText
                android:id="@+id/et_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_lname" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_phone"
                android:inputType="phone" />

            <EditText
                android:inputType="textMultiLine"
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:width="300dp"
                android:hint="@string/signup_location" />

            <Button
                style="@style/AppTheme.AccentButton"
                android:id="@+id/b_submit"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="submitRegistration"
                android:text="Submit"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
