<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.org.urbanroots.activities.LoginScreen">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/report_problem"
        android:layout_marginTop="40dp"
        android:id="@+id/b_report_issue"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:onClick="reportProblem"
        />

    <Button
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:text="@string/sign_up_text"
        android:id="@+id/b_sign_up"
        android:layout_above="@+id/b_sign_in"
        android:layout_centerHorizontal="true"
        android:onClick="signUp" />

    <Button
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:text="@string/sign_in_text"
        android:id="@+id/b_sign_in"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:onClick="signIn"/>


</RelativeLayout>
